WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140012
[GTK] Suppress unused parameter warnings in ui clients
https://bugs.webkit.org/show_bug.cgi?id=140012
Summary
[GTK] Suppress unused parameter warnings in ui clients
Yusuke Suzuki
Reported
2014-12-31 04:48:34 PST
[GTK] Suppress unused parameter warnings in message receivers
Attachments
Patch
(7.29 KB, patch)
2014-12-31 04:52 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(8.10 KB, patch)
2014-12-31 09:17 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(1.36 KB, patch)
2014-12-31 09:51 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2014-12-31 04:52:01 PST
Created
attachment 243842
[details]
Patch
Yusuke Suzuki
Comment 2
2014-12-31 09:17:14 PST
Created
attachment 243845
[details]
Patch
Yusuke Suzuki
Comment 3
2014-12-31 09:51:19 PST
Ah, messages.py changes are fixed in
http://trac.webkit.org/changeset/177833
, so dropping this parts.
Yusuke Suzuki
Comment 4
2014-12-31 09:51:48 PST
Created
attachment 243847
[details]
Patch
WebKit Commit Bot
Comment 5
2014-12-31 09:53:16 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
WebKit Commit Bot
Comment 6
2014-12-31 13:34:19 PST
Comment on
attachment 243847
[details]
Patch Clearing flags on attachment: 243847 Committed
r177838
: <
http://trac.webkit.org/changeset/177838
>
WebKit Commit Bot
Comment 7
2014-12-31 13:34:24 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug