[GTK] Suppress unused parameter warnings in ui clients https://bugs.webkit.org/show_bug.cgi?id=140012

Drop the parameter name of WebKitUIClient::isPlayingAudioDidChange
to suppress warnings.

Reviewed by Benjamin Poulain.

* UIProcess/API/gtk/WebKitUIClient.cpp:


Canonical link: https://commits.webkit.org/157996@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177838 268f45cc-cd09-0410-ab3c-d52691b4dbfc